--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -11,6 +11,10 @@ body {
   background-repeat: no-repeat;
 }
 
+input {
+  display: none;
+}
+
 .main-container {
   height: 100vh;
   display: flex;
@@ -38,7 +42,7 @@ body {
   height: 60vh;
   width: 60%;
   background-color: white;
-  border: 6px solid black;
+  border: 8px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,10 +57,8 @@ body {
 .slides {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
 }
 
 .slide {
@@ -72,6 +74,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  transition: 0.5s cubic-bezier(0.66, 0.01, 0.36, 1);
 }
 
 .subtitle {
@@ -88,6 +91,9 @@ body {
 }
 
 .navigation {
+  position: absolute;
+  top: 82%;
+  left: 40%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -95,24 +101,82 @@ body {
   height: 5%;
 }
 
-.nav-link {
-  width: 30px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.3s;
-}
-
-.nav-link:hover .nav-link-circle {
-  transition: 0.3s;
-  background-color: wheat;
-}
-
-.nav-link-circle {
+.navigation > label {
   display: inline-block;
-  height: 13px;
-  width: 13px;
-  border-radius: 50%;
+  height: 17px;
+  width: 17px;
+  border: 8px solid white;
   background-color: black;
+}
+
+.navigation > label:hover {
+  cursor: pointer;
+  outline: 4px dotted grey;
+}
+
+.label-area {
+  height: 25px;
+  width: 25px;
+}
+
+#s1:checked ~ .slides .slide > .slide-content:nth-child(1) {
+  margin-left: 0%;
+}
+
+#s1:checked ~ .navigation > label:nth-child(1) {
+  outline: 4px solid black;
+}
+
+#s2:checked ~ .slides .slide > .slide-content:nth-child(1) {
+  margin-left: -200%;
+}
+
+#s2:checked ~ .navigation > label:nth-child(2) {
+  outline: 4px solid black;
+}
+
+#s3:checked ~ .slides .slide > .slide-content:nth-child(1) {
+  margin-left: -400%;
+}
+
+#s3:checked ~ .navigation > label:nth-child(3) {
+  outline: 4px solid black;
+}
+
+#s4:checked ~ .slides .slide > .slide-content:nth-child(1) {
+  margin-left: -600%;
+}
+
+#s4:checked ~ .navigation > label:nth-child(4) {
+  outline: 4px solid black;
+}
+
+#s5:checked ~ .slides .slide > .slide-content:nth-child(1) {
+  margin-left: -800%;
+}
+
+#s5:checked ~ .navigation > label:nth-child(5) {
+  outline: 4px solid black;
+}
+
+@media screen and (max-width: 970px) {
+  .slides {
+    flex-direction: column;
+    overflow-y: scroll;
+  }
+
+  .slide {
+    height: 515px;
+    flex-shrink: initial;
+  }
+
+  #s1:checked ~ .slides .slide > .slide-content:nth-child(1) {
+    margin-left: 0%;
+    margin-top: 0%;
+  }
+
+  #s2:checked ~ .slides .slide > .slide-content:nth-child(1) {
+    margin-left: 0%;
+    margin-top: -515px;
+  }
 }
