--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -161,6 +161,7 @@ input {
 
 @media screen and (max-width: 970px) {
   .slider-container {
+    width: 80%;
     padding-left: 20px;
     flex-direction: row;
   }
@@ -174,16 +175,14 @@ input {
   }
 
   .slide {
-    height: 515px;
-    flex-shrink: initial;
     transition: 0.5s cubic-bezier(0.66, 0.01, 0.36, 1);
   }
 
   .navigation {
     flex-direction: column;
     top: 48%;
-    left: 65%;
-    height: 20%;
+    left: 75%;
+    height: 22%;
   }
 
   #s1:checked ~ .slides .slide > .slide-content:nth-child(1) {
@@ -200,7 +199,7 @@ input {
 
   #s2:checked ~ .slides .slide:nth-child(1) {
     margin-left: 0%;
-    margin-top: -114%;
+    margin-top: -51vh;
   }
 
   #s3:checked ~ .slides .slide > .slide-content:nth-child(1) {
@@ -208,7 +207,7 @@ input {
   }
 
   #s3:checked ~ .slides .slide:nth-child(1) {
-    margin-top: -229.5%;
+    margin-top: -102vh;
   }
 
   #s4:checked ~ .slides .slide > .slide-content:nth-child(1) {
@@ -216,7 +215,7 @@ input {
   }
 
   #s4:checked ~ .slides .slide:nth-child(1) {
-    margin-top: -346%;
+    margin-top: -153vh;
   }
 
   #s5:checked ~ .slides .slide > .slide-content:nth-child(1) {
@@ -224,6 +223,6 @@ input {
   }
 
   #s5:checked ~ .slides .slide:nth-child(1) {
-    margin-top: -460%;
+    margin-top: -204vh;
   }
 }
