--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -226,3 +226,25 @@ input {
     margin-top: -204vh;
   }
 }
+
+@media screen and (max-width: 570px) {
+  img {
+    transform: scale(0.8);
+  }
+
+  .subtitle {
+    font-size: 25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .navigation {
+    height: 17%;
+  }
+
+  .navigation > label {
+    height: 10px;
+    width: 10px;
+    border: 4px solid white;
+  }
+}
